--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<style>
+
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
+}
+
+</style>
+
+<div id='d3div'></div>
+
+
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
 
